--- a/tallerTypeScript1/style.css
+++ b/tallerTypeScript1/style.css
@@ -7,7 +7,6 @@
     font-family: 'Manjari', sans-serif;
     font-weight: bold;
     font-size: 20px;
-    margin-bottom: 5px;
 }
 
 * {
@@ -22,11 +21,11 @@ body {
 
 .table {
     margin: 30px;
-    border: 1px solid #000000;
+    border: 2px solid #000000;
     border-radius: 5px;
     background-color: #efeded;
     border-spacing:0;
-    width: 600px;
+    width: 500px;
 }
 
 .table td {
@@ -35,20 +34,58 @@ body {
     padding:10px;
 }
 
+.table td:nth-child(2) {
+    color: rgb(35, 35, 243);
+}
+
 .table tr {
     height: 50px;
     margin-top: 2px;
     margin-bottom: 2px;
+    margin-left: 2px;
     text-align: left;
 }
 
 .row {
     margin: 30px;
+    display: flex;
 }
 
-.col {
-    display: inline-block;
+.column {
+    flex: 30%;
     width: 300px;
     margin: 10px;
     text-align: justify;
 }
+
+.div {
+    column-count: 2;
+    column-gap: 20px;
+}
+
+.card-img-top {
+    width: 80%;
+    height: 15vw;
+    object-fit: contain;
+    margin-bottom: 6px;
+}
+
+.card-title {
+    font-family: 'Manjari', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 6px;
+}
+
+.card-text {
+    width: 80%;
+    font-size: 12px;
+    object-fit: cover;
+    margin-bottom: 6px;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
